--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,23 @@
+# bundler
+.bundle
+
+# rcov generated
+coverage
+
+# jeweler generated
+pkg
+
+# yard generated
+doc
+.yardoc
+
+# cucumber generated
+.cuke_*.log
+cuke_*.log
+
+# ctags generated
+tags
+
+# vim swap files
 *.swp
 *.swo
