--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ rvm:
   - 1.9.2
   - 1.9.3
   - ruby-head
-#  - jruby-18mode
-#  - jruby-19mode
-#  - jruby-head
+  - jruby-18mode
+  - jruby-19mode
+  - jruby-head
   - rbx-18mode
   - rbx-19mode
 
